# Final_XuanYingMao

./: readthedocs.yml
Xuanying_Mao_Final/xuan_ying_final/: .readthedocs.yml  README.md  pyproject.toml
Xuanying_Mao_Final/xuan_ying_final/docs/: Makefile  conf.py  daily_nutrition.csv  index.md  make.bat  modules.md
Xuanying_Mao_Final/xuan_ying_final/docs/docs/: conf.py  index.rst
Xuanying_Mao_Final/xuan_ying_final/docs/source/: modules.rst  xuan_ying_final.rst
Xuanying_Mao_Final/xuan_ying_final/src/xuan_ying_final/: __init__.py  nutritional_fact_api.py
Xuanying_Mao_Final/xuan_ying_final/tests/: test_xuan_ying_final.py
