[tool.poetry]
name = "xuan_ying_final"
version = "0.1.1"
description = "final project option A"
authors = ["XuanYing Mao"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sphinx = "^5.3.0"
sphinx-rtd-theme = "^1.1.1"
sphinx-autodoc-typehints = "^1.15.4"
myst_nb = "^0.17.1"
sphinx-autoapi = "^2.0.1"

[tool.poetry.group.dev.dependencies]
twine = "^6.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
